--- a/.lh/src/app/app.config.ts.json
+++ b/.lh/src/app/app.config.ts.json
@@ -3,11 +3,15 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 1,
             "patches": [
                 {
                     "date": 1751600932786,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1752126469674,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -2,13 +2,13 @@\n import { provideRouter } from '@angular/router';\n \n import { routes } from './app.routes';\n import { provideClientHydration, withEventReplay } from '@angular/platform-browser';\n-import { provideHttpClient } from '@angular/common/http';\n+import { provideHttpClient, withFetch } from '@angular/common/http';\n \n export const appConfig: ApplicationConfig = {\n   providers: [provideZoneChangeDetection({ eventCoalescing: true }), \n     provideRouter(routes), \n     provideClientHydration(withEventReplay()),\n-    provideHttpClient()\n+    provideHttpClient(withFetch())\n   ]\n };\n"
                 }
             ],
             "date": 1751600932786,
