--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,11 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/_redirects"
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "./"
+              }
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -92,7 +96,11 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/_redirects"
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "./"
+              }
             ],
             "styles": [
               "src/styles.css"
